<resources>
    <string name="app_name">Ecommerce-App</string>
    <string name="start">Start</string>
    <string name="find_your_best_n_collection">Find your best\n Collection</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="darachhat">Darachhat</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="recommendation">Recommendation</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_price">Total Price</string>
    <string name="total_tax">Total Tax</string>
    <string name="subtotal">subtotal</string>
    <string name="check_out">Check Out</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="my_orders">My Orders</string>
    <string name="no_orders_yet">No Orders Yet</string>
    <string name="empty_orders_hint">Start shopping and place your first order!</string>
    <string name="browse_products">Browse Products</string>
    <string name="view_details">View Details</string>
    <string name="order_details">Order Details</string>
    <string name="order_information">Order Information</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="order_items">Order Items</string>
    <string name="pricing_summary">Pricing Summary</string>
    <string name="close">Close</string>
</resources>
